--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li> 
-          <li><a href="#blog">Blog</a></li>
+          <li><a href="#blog.html">Blog</a></li>
           <li><a href="destinations.html">Destinations</a></li> 
           <li><a href="#itineraries.html">Itineraries</a></li>
           <li><a href="#contact.html">Contact</a></li>
@@ -27,7 +27,7 @@
     </div>
   </header>
 
-  <!-- Add your contact us content here -->
+
   <section class="contact-section">
     <div class="contact-info">
       <h2>Contact Us</h2>
