--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Her Solo Compass - Blog</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file -->
-</head>
+  <link rel="stylesheet" href="styles.css"> 
 <body>
   <header>
       <div class="navbar">
@@ -14,9 +13,9 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li> <!-- Link to the homepage -->
+          <li><a href="index.html">Home</a></li> 
           <li><a href="#blog.html">Blog</a></li>
-          <li><a href="destinations.html">Destinations</a></li> <!-- Link to the destinations -->
+          <li><a href="destinations.html">Destinations</a></li>
           <li><a href="#itineraries.html">Itineraries</a></li>
           <li><a href="#contact.html">Contact</a></li>
         </ul>
