--- a/destinations.html
+++ b/destinations.html
@@ -17,17 +17,17 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li> <!-- Link to the homepage -->
-          <li><a href="#blog">Blog</a></li>
+          <li><a href="index.html">Home</a></li> 
+          <li><a href="#blog.html">Blog</a></li>
           <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="itineraries.html">Itineraries</a></li> <!-- Link to the itineraries -->
+          <li><a href="itineraries.html">Itineraries</a></li>
           <li><a href="#contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
   
-  <!-- Sub-navigation for different continents -->
+
   <nav class="sub-navigation">
     <ul>
       <li><a href="#africa">Africa</a></li>
@@ -41,7 +41,7 @@
   </nav>
 
   <section class="destinations">
-    <!-- Africa destination -->
+
     <div id="africa" class="row">
       <div class="column">
         <h2>Africa</h2>
