--- a/itineraries.html
+++ b/itineraries.html
@@ -17,9 +17,9 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li> <!-- Link to the homepage -->
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="destinations.html">Destinations</a></li> <!-- Link to the destinations -->
+          <li><a href="index.html">Home</a></li> 
+          <li><a href="#blog.html">Blog</a></li>
+          <li><a href="destinations.html">Destinations</a></li> 
           <li><a href="#itineraries.html">Itineraries</a></li>
           <li><a href="#contact.html">Contact</a></li>
         </ul>
