--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
          <li><a href="index.html">Home</a></li>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="destinations.html">Destinations</a></li>
+          
 <li class="dropdown">
   <a href="itineraries.html" class="dropbtn">Itineraries</a>
   <div class="dropdown-content">
-    <a href="#">Itinerary 1</a>
-    <a href="#">Itinerary 2</a>
-    <a href="#">Itinerary 3</a>
+    <a href="itineraries.html#thailand">Thailand</a>
+    <a href="itineraries.html#costa-rica">Costa Rica</a>
+    <a href="itineraries.html#egypt">Egypt</a>
   </div>
 </li>
+
 <li><a href="contact.html">Contact</a></li>
 
         </ul>
