--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
 <li><a href="blog.html">Blog</a></li>
 <li><a href="destinations.html">Destinations</a></li>
           
+
 <li class="dropdown">
-  <a href="itineraries.html" class="dropbtn">Itineraries</a>
-  <div class="dropdown-content">
-    <a href="itineraries.html#thailand">Thailand</a>
-    <a href="itineraries.html#costa-rica">Costa Rica</a>
-    <a href="itineraries.html#egypt">Egypt</a>
-  </div>
+  <a href="#thailand">Thailand</a>
 </li>
+<li class="dropdown">
+  <a href="#costa-rica">Costa Rica</a>
+</li>
+<li class="dropdown">
+  <a href="#egypt">Egypt</a>
+</li>
+
 
 <li><a href="contact.html">Contact</a></li>
 
