--- a/itineraries.html
+++ b/itineraries.html
@@ -76,23 +76,35 @@
     </div>
   </section>
 
-  <section class="itinerary-grids-section">
-    <a href="index.html#thailand" class="itinerary-grid">
-      <img src="thailand.jpeg" alt="Thailand Itinerary">
-      <h3>Thailand</h3>
-      <p>Free Downloadable Itinerary</p>
-    </a>
-    <a href="index.html#costa-rica" class="itinerary-grid">
-      <img src="costa.jpeg" alt="Costa Rica Itinerary">
-      <h3>Costa Rica</h3>
-      <p>Free Downloadable Itinerary</p>
-    </a>
-    <a href="index.html#egypt" class="itinerary-grid">
-      <img src="egypt.jpeg" alt="Egypt Itinerary">
-      <h3>Egypt</h3>
-      <p>Free Downloadable Itinerary</p>
-    </a>
-  </section>
+
+<section class="itinerary-grids-section" id="thailand">
+  <a href="#thailand" class="itinerary-grid">
+    <img src="thailand.jpeg" alt="Thailand Itinerary">
+    <h3>Thailand</h3>
+    <p>Free Downloadable Itinerary</p>
+  </a>
+
+</section>
+
+<section class="itinerary-grids-section" id="costa-rica">
+  <a href="#costa-rica" class="itinerary-grid">
+    <img src="costa.jpeg" alt="Costa Rica Itinerary">
+    <h3>Costa Rica</h3>
+    <p>Free Downloadable Itinerary</p>
+  </a>
+ 
+</section>
+
+<section class="itinerary-grids-section" id="egypt">
+  <a href="#egypt" class="itinerary-grid">
+    <img src="egypt.jpeg" alt="Egypt Itinerary">
+    <h3>Egypt</h3>
+    <p>Free Downloadable Itinerary</p>
+  </a>
+
+</section>
+
+
 
   <footer>
     <p>&copy; 2023 Her Solo Compass. All rights reserved.</p>
