--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <a href="#egypt">Egypt</a>
 </li>
 
-
+<li><a href="itineraries.html">Itinieraries</a></li>
 <li><a href="contact.html">Contact</a></li>
 
         </ul>
