--- a/itineraries.html
+++ b/itineraries.html
@@ -20,7 +20,7 @@
           <li><a href="index.html">Home</a></li> 
           <li><a href="#blog.html">Blog</a></li>
           <li><a href="#destinations.html">Destinations</a></li> 
-          <li><a href="#itineraries.html">Itineraries</a></li>
+          <li><a href="itineraries.html">Itineraries</a></li>
           <li><a href="#contact.html">Contact</a></li>
         </ul>
       </nav>
